Sonar Issue Bug Id TATA-833